# quickfix

./: CMakeLists.txt
cmake/: QuickfixPlatformSettings.cmake
examples/ordermatch/test/: CMakeLists.txt
src/: CMakeLists.txt  ut.cpp
src/python/: CMakeLists.txt
src/python2/: CMakeLists.txt
src/python3/: CMakeLists.txt
src/quickfix/: Allocator.h  CMakeLists.txt  Log.cpp  Log.h
src/quickfix/fix44/: ExecutionReport.h  MarketDataIncrementalRefresh.h
src/quickfix/test/: MessagesTestCase.cpp
